syntax = "proto3";

package monitor;

service Monitor {
  rpc EnableMonitor(EnableMonitorRequest) returns (MonitorStateReply);
  rpc DisableMonitor(DisableMonitorRequest) returns (MonitorStateReply);
  rpc ToggleMonitor(ToggleMonitorRequest) returns (MonitorStateReply);
  rpc GetMonitorState(GetMonitorStateRequest) returns (MonitorStateReply);
}

enum MonitorState {
  Enabled = 0;
  Disabled = 1;
}

message MonitorStateReply { MonitorState state = 1; }

message EnableMonitorRequest {}
message DisableMonitorRequest {}
message ToggleMonitorRequest {}
message GetMonitorStateRequest {}
